--- a/css/main.scss
+++ b/css/main.scss
@@ -209,17 +209,29 @@ a{
 // SIDE OVERLAY ELEMENT
 .side-element-overlay{
     position: fixed;
-    height: 100vh;
+    height: 100%;
     width: 20vw;
     left: 0;
     top: 0;
     z-index: 20;
     background: linear-gradient(45deg, rgba(0,0,0,1) 0%, rgba(23,23,23,1) 100%);
     box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-    img{
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+    // img{
+    //     width: 100%;
+    //     height: 100%;
+    //     object-fit: cover;
+    // }
+    .navbar-brand{
+      padding: 1.042vw 3.2vw;
+      .logo-name{
+        color: #fff;
+        font-size: 1.563vw;
+        font-family: "Mattone 150";
+        font-weight: 600;
+        display: block;
+        padding-top: 1rem;
+        padding-bottom: 0.5rem;
+      }
     }
     .navbar-nav {
       position: absolute;
@@ -832,4 +844,78 @@ main{
   margin: 0 auto;
   display: block;
 }
+
+
+
+
+// mobile button
+
+.toggle-button{
+  background-color: transparent;
+  border: none;
+  span{
+    display: block;
+    width: 18px;
+    margin-bottom: 3px;
+    height: 2px;
+    border: 0;
+    -webkit-box-sizing: content-box;
+            box-sizing: content-box;
+    background-clip: content-box;
+    -webkit-transition: background-color 500ms ease-in-out 250ms;
+    transition: background-color 500ms ease-in-out 250ms;
+    background-color: #fff;
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+  }
+}
+
+.side-element-overlay{
+  transition: transform 500ms ease-in-out;
+  &.active-sidebar{
+    transform: translateX(0);
+  }
+  .mobile-button{
+    display: none;
+    position: absolute;
+    right: 20px;
+    top: 22px;
+    z-index: 999;
+    .toggle-button{
+      span{
+        border-radius: 20px;
+      }
+      span:nth-child(2){
+        display: none;
+      }
+      span:nth-child(1){
+        transform: translateY(6px) rotate(-225deg);
+        display: block;
+        top: -3px;
+        position: relative;
+      }
+      span:nth-child(3){
+        transform: translateY(-6px) rotate(225deg);
+        display: block;
+        bottom: -4px;
+        position: relative;
+      }
+    }
+  }
+}
+
+
+.desktop-button{
+  display: none;
+  padding: 0 50px;
+  position: absolute;
+  top: 40px;
+  z-index: 10;
+}
+
+
+.overlay-cover{
+  transition: transform 500ms ease-in-out;
+}
+
 /*# sourceMappingURL=main.css.map */
