add favicon on the site

--- a/css/main.css
+++ b/css/main.css
@@ -863,4 +863,8 @@ main {
   z-index: 10;
 }
 
+.overlay-cover {
+  transition: transform 500ms ease-in-out;
+}
+
 /*# sourceMappingURL=main.css.map */
